--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header{
 .header-categories{
     height: 100%;
     width: 80%;
-    color: #000080;
+    color: #3D1365;
     font-weight: 700;
     font-size: 1.7rem;
     /* margin-left: 5%; */
@@ -38,7 +38,7 @@ main{
     width: 100%;
     height: 100%;
     /* margin-top: 1%; */
-    background-color: blue;
+    background-image: linear-gradient(blue, #3D1365);
     display: flex;
     flex-direction: column;
     gap: 10%;
@@ -58,7 +58,7 @@ main{
 }
 .container-cards{
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     /* background-color: chartreuse; */
     display: flex;
     align-items: center;
@@ -74,6 +74,5 @@ main{
 .card img{
     height: 100%;
     width: 100%;
-    object-fit: fill;
     border-radius: 10px;
 }
