--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body{
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: aqua;
+    background-image: linear-gradient(blue, #3D1365);
+    flex-wrap: wrap;
 }
 header{
     width: 100%;
@@ -19,6 +20,7 @@ header{
     align-items: center;
     justify-content: flex-start;
     flex-direction: row;
+    /* margin-bottom: 10%; */
 }
 .header-categories{
     height: 100%;
@@ -36,14 +38,13 @@ header{
 }
 main{
     width: 100%;
-    height: 100%;
-    /* margin-top: 1%; */
-    background-image: linear-gradient(blue, #3D1365);
+    height: 90vh;
     display: flex;
     flex-direction: column;
-    gap: 10%;
+    /* gap: 10%; */
     align-items: center;
     justify-content: center;
+    overflow-x: hidden;
 }
 .container-section{
     width: 100%;
@@ -52,13 +53,17 @@ main{
     font-size: 1.7rem;
     display: flex;
     flex-direction: column;
+    margin-bottom: 7vh;
+}
+.container-section.shounen{
+    margin-top: 30vh;
 }
 .container-section p{
     margin-left: 2%;
 }
 .container-cards{
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     /* background-color: chartreuse; */
     display: flex;
     align-items: center;
