--- a/style.css
+++ b/style.css
@@ -2,13 +2,17 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
 }
 body{
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: #3D1365;   
+    align-items: center;
+    background-color: #3D1365;
+    overflow-x: hidden;   
 }
 .header{
     width: 100%;
@@ -35,6 +39,26 @@ body{
 .header-categories p{
     margin-right: 2%;
 }
+form{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.caixa-de-pesquisa{
+    height: 30px;
+    color: #ffffff;
+    background-color: #3D1365;
+    border: 1px solid #ffffff;
+    border-radius: 10px;
+    text-align: center;
+}
+.pesquisar{
+    height: 30px;
+    width: 9    0px;
+    background-color: #ffffff;
+    border: 2px solid #3D1365;
+    border-radius: 10px;
+}
 main{
     width: 100%;
     height: auto;
@@ -43,7 +67,8 @@ main{
     /* gap: 10%; */
     align-items: center;
     justify-content: center;
-    flex-grow: 2;
+    /* flex-grow: 2; */
+    /* flex-wrap: wrap; */
 }
 .container-section{
     width: 100%;
@@ -52,24 +77,31 @@ main{
     font-size: 1.7rem;
     display: flex;
     flex-direction: column;
-    margin-bottom: 80vh;
     /* margin-top: 100%; */
-    margin-left: 2%;
+    /* margin-left: 1%; */
     margin-top: 2vh;
+    /* flex-grow: 1; */
+   
 }
 .section-title{
     width: 97%;
-    height: 100vh;
     border: 3px solid #ffffff;
     border-radius: 20px;
     font-size: 2rem;
 }
-.container-section.shounen{
-    
-}
-.container-section p{
+.section-title p{
     margin-left: 1%;
+    width: 100%;
     height: 5vh;
+    display: flex;
+    align-items: center;
+}
+.defaut-text{
+    font-size: 3rem;
+    transition: all 1s;
+}
+.defaut-text:hover{
+    transform: rotateY(180deg) ;
 }
 .container-cards{
     width: 98%;
@@ -78,6 +110,8 @@ main{
     align-items: center;
     flex-wrap: wrap;
     gap: 1%;
+    justify-content: center;
+    margin-top: 2vh;
     /* flex-grow: 1; */
 }
 .card{
@@ -86,9 +120,37 @@ main{
     min-width: 160px;
     border-radius: 10px;
     margin-bottom: 1%;
+    cursor: pointer;
 }
 .card img{
     height: 100%;
     width: 100%;
     border-radius: 10px;
+}
+.modal-container{
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: #000a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    z-index: -1;
+    transition: all .8s;
+}
+.modal-container.active{
+    opacity: 1;
+    z-index: 1;
+}
+.modal-content{
+    height: 500px;
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+    padding: 24px;
+    box-shadow: 0px 0px 10px #ffffff;
 }
