--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ main{
     gap: 1%;
     justify-content: center;
     margin-top: 2vh;
+    flex-grow: 1;
     /* flex-grow: 1; */
 }
 .card{
@@ -122,6 +123,7 @@ main{
     border-radius: 10px;
     margin-bottom: 1%;
     cursor: pointer;
+   
 }
 .card img{
     height: 100%;
@@ -129,11 +131,11 @@ main{
     border-radius: 10px;
 }
 .modal-container{
-    position: fixed;
     left: 0;
     top: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    position: fixed;
+    width: 100%;
     background-color: #000a;
     display: flex;
     justify-content: center;
@@ -141,17 +143,58 @@ main{
     opacity: 0;
     z-index: -1;
     transition: all .8s;
+    cursor: pointer;
 }
 .modal-container.active{
     opacity: 1;
     z-index: 1;
 }
 .modal-content{
-    height: 500px;
-    width: 700px;
+    height: 70%;
+    width: 70%;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     background-color: #ffffff;
     padding: 24px;
     box-shadow: 0px 0px 10px #ffffff;
+    color: #000000;
+    border-radius: 20px;
+    border: 3px solid #3D1365;
+}
+.first-column{
+    width: 30%;
+    height: 80%;
+    margin-right: 10% ;
+}
+.first-column img{
+    width: 90%;
+    height: 90%;
+    min-width: 160px;
+    border: 5px solid #3D1365;
+    border-radius: 20px;
+}
+.first-column p{
+    width: 90%;
+    margin-top: 10%;
+    font-size: 2rem;
+    text-align: center;
+    border-bottom: 2px solid #3D1365;
+}
+.second-column{
+    width: 60%;
+    height: 90%;
+    display: flex;
+    /* align-items: center; */
+    text-align: center;
+    padding: 5% ;
+    border: 5px solid #3D1365;
+    border-radius: 20px;
+    font-size: 1.5rem;
+    overflow-y: scroll;
+    
+}
+.second-column::-webkit-scrollbar{
+    width: 5%;
+    margin-right: 5%;
+    color: #3D1365;
 }
